--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -9,8 +9,8 @@
       
       .parallax {
           /* The image used */
-          background-image: url("http://sf.co.ua/13/02/wallpaper-768.jpg");
-      
+         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("https://images.pexels.com/photos/53176/architecture-iron-steel-building-53176.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+       
           /* Full height */
           height: 100%;
       
@@ -58,13 +58,13 @@
           <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                The Lessons Learned Blog
+                The Community Board
               </button>
             </h5>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body">
-              A blog to host a collection of articles from industry practioners sharing their recent project experiences to provide our community of engineers and architects with insights and knowledge they can apply to their own projects.
+              A board to host a collection of articles from industry practioners sharing their recent project experiences or researchers sharing their published scientific findings to provide our community of engineers and architects with insights and knowledge they can apply to their own projects.
             </div>
           </div>
         </div>
