--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
     <%= render 'layouts/header' %>
     <!--test-->
     <div class="jumbotron d-flex justify-content-center" style="
-          background-image: url(http://sf.co.ua/13/02/wallpaper-768.jpg);
+          background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(https://images.pexels.com/photos/416998/pexels-photo-416998.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
           height: 100%;
           background-attachment: fixed;
           background-position: center;
